--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-python-telegram-bot==11.1.0
-pycrypto==2.6.1
+psycopg2_binary==2.7.5
+python_telegram_bot==11.1.0
 stravalib==0.9.4
+pycrypto==2.6.1
+psycopg2==2.7.5
