--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 requests==2.21.0
-psycopg2_binary==2.7.6.1
+psycopg2-binary==2.7.6.1
 python_telegram_bot==11.1.0
 stravalib==0.10.2
 psycopg2==2.7.6.1
