--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+ujson==1.35
 requests==2.21.0
 psycopg2-binary==2.7.6.1
 python_telegram_bot==11.1.0
@@ -5,3 +6,4 @@ stravalib==0.10.2
 psycopg2==2.7.6.1
 telegram==0.0.1
 iron-cache==0.3.2
+pycryptodome==3.7.2
