Remove iron-cache and use memcachier

--- a/app.json
+++ b/app.json
@@ -9,5 +9,10 @@
       "size": "Free"
     }
   },
-  "image": "heroku/python"
+  "image": "heroku/python",
+  "addons": [
+    {
+      "plan": "memcachier:dev"
+    }
+  ]
 }
